--- a/homework/product.html
+++ b/homework/product.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" , shrink-to-fit=no>
 
-    <!-- Bootstrap CSS 부트스트랩의 양식을 사용하려면 class, id, aria-label, aria-describedby 등의 이름을 변경하면 안 되는 건지 궁급합니다. -->
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="product.css">
