--- a/homework/product.html
+++ b/homework/product.html
@@ -22,7 +22,47 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    
+    <script>
+        function placeOrder() {
+            // 주문자 정보란에 입력한 내용 가져오기
+            let orderer = $("#inputName").val();
+            let amount = $("#inputGroupSelect01").val();
+            let address = $("#inputAddress").val();
+            let phone = $("#inputPhone").val();
+
+            // 입력되지 않은 정보가 있으면 alert 띄우고 포커스 맞추기 (return의 역할은?)
+            if (orderer == "") {
+                alert("성함을 입력해주세요!");
+                $("#inputName").focus();
+                return
+            } else if (amount == "") {
+                alert("수량을 선택해주세요!");
+                $("#inputGroupSelect01").focus();
+                return
+            } else if (address == "") {
+                alert("주소를 입력해주세요!");
+                $("#inputAddress").focus();
+                return
+            } else if (phone == "") {
+                alert("연락처를 입력해주세요!");
+                $("#inputPhone").focus();
+                return
+            } else {
+                alert("주문 완료!")
+            }
+
+            // 가져온 값을 이용해 odrersBox에 붙일 태그 만들기
+            let temp_list = "<tr>\
+                    <td>" + orderer + "</td>\
+                    <td>" + amount + "</td>\
+                    <td>" + address + "</td>\
+                    <td>" + phone + "</td>\
+                    </tr>";
+
+            // 주문하기 버튼을 누르면 주문자 리스트에 추가하기
+            $("#odrerBox").append(temp_list);
+        }
+    </script>
     <!-- CSS Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cute+Font&display=swap" rel="stylesheet">
 
@@ -35,22 +75,24 @@
             <span><strong>해물톡톡</strong></span>
             <span>가격: 12,000원 / 개</span>
             <p>해물톡톡 오집니다. 입안에서 남해가 펼쳐집니다. 파/고추 이런 거 안 썰어넣어도 됩니다. 그냥 라면에 해물톡톡 뿌리면 그대로 존맛탱 식사 완성이에요. 다른 분들 사지마세요. 나만
-                먹을꺼니까.</p>
+                먹을꺼니까.
+            </p>
         </div>
         <div class="product-order">
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1">주문자 성함</span>
                 </div>
-                <input type="text" class="form-control" placeholder="성함을 입력해주세요" aria-label="Username"
+                <input type="text" id="inputName" class="form-control" placeholder="성함을 입력해주세요" aria-label="Username"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
                     <label class="input-group-text" for="inputGroupSelect01">수량</label>
                 </div>
-                <select class="custom-select" id="inputGroupSelect01">
-                    <option selected>-- 수량을 선택하세요 --</option>
+                <select class="custom-select" id="inputGroupSelect01" placeholder="-- 수량을 선택하세요 --">
+                    <!-- selected 라고만 하면 문자열로 인식하고 value=""를 넣으면 인식하지 않는 이유 -->
+                    <option value="" selected>-- 수량을 선택하세요 --</option>
                     <option value="1">1통</option>
                     <option value="2">2통</option>
                     <option value="3">3통</option>
@@ -60,19 +102,34 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1">주소</span>
                 </div>
-                <input type="text" class="form-control" placeholder="○○시 ○○구" aria-label="Username"
+                <input type="text" id="inputAddress" class="form-control" placeholder="○○시 ○○구" aria-label="Username"
                     aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1">연락처</span>
                 </div>
-                <input type="text" class="form-control" placeholder="- 없이 번호만 입력해주세요" aria-label="Username"
+                <input type="text" id="inputPhone" class="form-control" placeholder="010-000-0000" aria-label="Username"
                     aria-describedby="basic-addon1">
             </div>
             <div class="btn-order">
-                <button type="button" class="btn btn-primary btn-lg">주문하기</button>
+                <button type="button" class="btn btn-primary btn-lg" onclick="placeOrder()">주문하기</button>
             </div>
+        </div>
+        <div class="order-list">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">이름</th>
+                        <th scope="col">수량</th>
+                        <th scope="col">주소</th>
+                        <th scope="col">전화번호</th>
+                    </tr>
+                </thead>
+                <tbody id="odrerBox">
+
+                </tbody>
+            </table>
         </div>
 
 </body>
