--- a/homework/product.html
+++ b/homework/product.html
@@ -30,11 +30,11 @@
             let address = $("#inputAddress").val();
             let phone = $("#inputPhone").val();
 
-            // 입력되지 않은 정보가 있으면 alert 띄우고 포커스 맞추기 (return의 역할은?)
+            // 입력되지 않은 정보가 있으면 alert 띄우고 포커스 맞추기 (return 공백은 거기서 함수를 끝내는 역할임)
             if (orderer == "") {
                 alert("성함을 입력해주세요!");
                 $("#inputName").focus();
-                return
+                return 
             } else if (amount == "") {
                 alert("수량을 선택해주세요!");
                 $("#inputGroupSelect01").focus();
@@ -51,7 +51,7 @@
                 alert("주문 완료!")
             }
 
-            // 가져온 값을 이용해 odrersBox에 붙일 태그 만들기
+            // 가져온 값을 이용해 odrersBox에 붙일 태그 만들기 (여기서 temp_list는 태그처럼 생긴 '문자열'임)
             let temp_list = "<tr>\
                     <td>" + orderer + "</td>\
                     <td>" + amount + "</td>\
@@ -59,7 +59,7 @@
                     <td>" + phone + "</td>\
                     </tr>";
 
-            // 주문하기 버튼을 누르면 주문자 리스트에 추가하기
+            // 주문하기 버튼을 누르면 주문자 리스트에 추가하기 (append는 () 안에 문자열이 들어가면 html 태그로 바꿔주는 역할을 함)
             $("#odrerBox").append(temp_list);
         }
     </script>
@@ -90,12 +90,12 @@
                 <div class="input-group-prepend">
                     <label class="input-group-text" for="inputGroupSelect01">수량</label>
                 </div>
-                <select class="custom-select" id="inputGroupSelect01" placeholder="-- 수량을 선택하세요 --">
-                    <!-- selected 라고만 하면 문자열로 인식하고 value=""를 넣으면 인식하지 않는 이유 -->
-                    <option value="" selected>-- 수량을 선택하세요 --</option>
-                    <option value="1">1통</option>
-                    <option value="2">2통</option>
-                    <option value="3">3통</option>
+                <select class="custom-select" id="inputGroupSelect01">
+                    <!-- selected에 value를 넣으면 value값을 인식함. ex)1통을 선택하면 1을 인식함. hiddent 한번 선택하면 그 후에는 해당 값을 숨겨줌-->
+                    <option value="" selected hidden>-- 수량을 선택하세요 --</option>
+                    <option value="1통">1통</option>
+                    <option value="2통">2통</option>
+                    <option value="3통">3통</option>
                 </select>
             </div>
             <div class="input-group mb-3">
